updated details in website

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi my name is Nicholas Patano, Italian, South American Canadian.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from a Orillia Ontario.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies include skiing, video games and working out</p>
       <h1>What's your dream job?</h1>
-      <p>Millionair Cat enthusieast</p>
+      <p>My Dream job is to become a billionair cat enthusiast</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in a small town north of Toronto </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to become a web developer because its something I always wanted to do and havn't had the means until now</p>
     </section>
 
     <footer id="footer">
