--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>My favorite hobbies include skiing, video games and working out</p>
       <h1>What's your dream job?</h1>
-      <p>My Dream job is to become a billionair cat enthusiast</p>
+      <p>My Dream job is to become a billionaire cat enthusiast</p>
       <h1>Where do you live?</h1>
       <p>I live in a small town north of Toronto </p>
       <h1>Why do you want to be a web developer?</h1>
